# physics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
notebooks/: 001_beyond_light.py  003_charged_motion.py  005_exotic_matter.py  010_three_body.py  beyond_light.py  black_holes.py  charged_motion.py  dimensions.py  exotic_matter.py  feynman_beyond_light.py  feynman_black_holes.py  feynman_charged_motion.py  feynman_exotic_matter.py  feynman_gravitation.py  feynman_spacetime.py  feynman_speed_of_light.py  feynman_wave_particle.py  gravitation.py  magnetism.py  spacetime.py  speed_of_light.py  three_body.py  wave_particle.py
scripts/: export_notebooks.sh
src/physics/: __init__.py  constants.py  integrators.py  orbital_mechanics.py  relativity.py
src/physics_explorations/: __init__.py  export.py
src/physics_explorations/visualization/: __init__.py  animations.py  styles.py
tests/: __init__.py  test_notebooks.py
tests/e2e/: __init__.py  test_notebooks.py
tests/unit/: test_integrators.py  test_orbital_mechanics.py  test_relativity.py
