[project]
name = "feynman-gravitation-viz"
version = "0.1.0"
description = "Interactive visualization of Feynman's Lecture on the Theory of Gravitation"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.10.0",
    "plotly>=5.24.0",
    "polars>=1.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
]

[tool.marimo]
package_manager = "uv"
