[project]
name = "physics-explorations"
version = "0.1.0"
description = "Interactive Feynman-style physics visualizations with marimo notebooks"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.10.0",
    "plotly>=5.24.0",
    "polars>=1.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
]

[tool.marimo]
package_manager = "uv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 180  # 3 minute timeout per test (notebooks can be slow)
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/physics_explorations"]
